# DunCAD

./: .gitignore  CLAUDE.md  CMakeLists.txt  k65_enclosure.dcad  test_cubeiform_v2.dcad  triclaude_fidget_spinner.scad
.claude/: settings.json  settings.local.json
data/language-specs/: openscad.lang
data/snippets/: openscad.snippets
docs/: ARCHITECTURE.md
duncad_prison/: CLAUDE.md  Makefile  scripture  scripture.c  triclaude_idol.dcad  triclaude_idol.scad
models/: k65_enclosure.dcad
src/: main.c
src/bezier/: bezier_canvas.c  bezier_canvas.h  bezier_curve.c  bezier_curve.h  bezier_editor.c  bezier_editor.h  bezier_fit.c  bezier_fit.h
src/core/: array.c  array.h  error.c  error.h  log.c  log.h  manifest.c  manifest.h  string_builder.c  string_builder.h
src/cubeiform/: cubeiform.c  cubeiform.h  cubeiform_eda.c  cubeiform_eda.h
src/eda/: eda_cubeiform_export.c  eda_cubeiform_export.h  eda_library.c  eda_library.h  eda_netlist.c  eda_netlist.h  eda_pcb.c  eda_pcb.h  eda_ratsnest.c  eda_ratsnest.h  eda_schematic.c  eda_schematic.h  sexpr.c  sexpr.h
src/eda_ui/: eda_footprint_browser.c  eda_footprint_browser.h  eda_library_browser.c  eda_library_browser.h  fp_editor.c  fp_editor.h  pcb_canvas.c  pcb_canvas.h  pcb_editor.c  pcb_editor.h  pcb_footprint_render.c  pcb_footprint_render.h  pcb_layer_panel.c  pcb_layer_panel.h  sch_canvas.c  sch_canvas.h  sch_editor.c  sch_editor.h  sch_symbol_render.c  sch_symbol_render.h  sym_editor.c  sym_editor.h
src/gl/: dc_topo.h  edge_profile.h  gl_bezier_ray.c  gl_bezier_ray.h  gl_bezier_wire.c  gl_bezier_wire.h  gl_sdf_analytical.c  gl_sdf_analytical.h  gl_viewport.c  gl_viewport.h  gl_voxel.c  gl_voxel.h  stl_loader.c  stl_loader.h
src/inspect/: inspect.c  inspect.h
src/scad/: scad_export.c  scad_export.h  scad_runner.c  scad_runner.h  scad_splitter.c  scad_splitter.h
src/ui/: ai_chat.c  ai_chat.h  app_window.c  app_window.h  code_editor.c  code_editor.h  eda_view.c  eda_view.h  scad_completion.c  scad_completion.h  scad_preview.c  scad_preview.h  shape_menu.c  shape_menu.h  terminal_panel.c  terminal_panel.h  transform_panel.c  transform_panel.h
src/voxel/: marching_cubes.c  marching_cubes.h  sdf.c  sdf.h  sdf_to_bezier.c  sdf_to_bezier.h  voxel.c  voxel.h  voxelize_bezier.c  voxelize_bezier.h  voxelize_gpu.c  voxelize_gpu.h  voxelize_stl.c  voxelize_stl.h
talmud-main/: .gitignore  CLAUDE.md  README.md  install.sh  output.stl  purgatory.txt  talmud.c  triclaude_fidget_spinner.scad
talmud-main/talmud/narthex/include/: talmud_util.h
talmud-main/talmud/narthex/sofer/: sofer.c
talmud-main/talmud/narthex/yotzer/: yotzer.c
talmud-main/talmud/profane/darshan/: darshan.c
talmud-main/talmud/sacred/trinity_site/: trinity_site  trinity_site.c  ts_bezier_fit.h  ts_bezier_mesh.h  ts_bezier_primitives.h  ts_bezier_surface.h  ts_bezier_voxel.h  ts_csg.h  ts_eval.h  ts_extrude.h  ts_geo.h  ts_interp  ts_interp.c  ts_lexer.h  ts_mat.h  ts_mesh.h  ts_opencl.h  ts_parser.h  ts_random.h  ts_scalar.h  ts_test.h  ts_text.h  ts_trig.h  ts_vec.h
tests/: test_array.c  test_bezier_canvas.c  test_bezier_curve.c  test_bezier_editor.c  test_bezier_fit.c  test_bezier_voxel.c  test_cubeiform.c  test_cubeiform_eda.c  test_eda_library.c  test_eda_pcb.c  test_eda_schematic.c  test_edge_profile.c  test_manifest.c  test_marching_cubes.c  test_scad_export.c  test_scad_runner.c  test_sexpr.c  test_string_builder.c  test_topo.c  test_voxel.c
tests/data/: Device.kicad_sym  simple.kicad_pcb  simple.kicad_sch  simple_circuit.dcad
tools/: duncad_docs.c  duncad_inspect.c
